server: Add connection info status count to ListConnectionInfo
